--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@electron/remote": "^2.1.2",
     "bootstrap-icons": "^1.11.3",
-    "child_process": "^1.0.2"
+    "child_process": "^1.0.2",
+    "highlight.js": "^11.10.0"
   }
 }
