new soft sidebars

--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,5 +1,5 @@
 {
-    "theme": "light",
-    "sidebarColor": "original",
-    "widgetStyle": "border"
+    "theme": "dark",
+    "sidebarColor": "soft",
+    "widgetStyle": "shadow"
 }
