Rewrote the editor logic

--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,5 +1,5 @@
 {
-    "theme": "light",
-    "sidebarColor": "invisible",
+    "theme": "dark",
+    "sidebarColor": "soft",
     "widgetStyle": "shadow"
 }
