Made progress to the sticky board UI and features

--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,5 +1,6 @@
 {
     "theme": "dark",
-    "sidebarColor": "soft",
-    "widgetStyle": "shadow"
+    "sidebarColor": "invisible",
+    "widgetStyle": "shadow",
+    "folderIconColor": "gray"
 }
