Working on the new sticky note UI and functionality

--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,6 +1,6 @@
 {
     "theme": "dark",
-    "sidebarColor": "invisible",
+    "sidebarColor": "soft",
     "widgetStyle": "shadow",
-    "folderIconColor": "gray"
+    "folderIconColor": "blue"
 }
