Created a component for the option menu. The logic is now reused for every entity component

--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,6 +1,6 @@
 {
     "theme": "dark",
-    "sidebarColor": "soft",
+    "sidebarColor": "invisible",
     "widgetStyle": "shadow",
     "folderIconColor": "blue"
 }
