GET, DELETE and ADD work on the sticky board home view. UPDATE is done from within the sticky board view through PATCH HTTP requests

--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,6 +1,6 @@
 {
     "theme": "light",
-    "sidebarColor": "soft",
+    "sidebarColor": "original",
     "widgetStyle": "border",
     "folderIconColor": "blue",
     "sidebarState": "small"
