removed all the flashcard code, Wont be a feature for release 1.0

--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,7 +1,7 @@
 {
     "theme": "light",
-    "sidebarColor": "original",
-    "widgetStyle": "border",
+    "sidebarColor": "invisible",
+    "widgetStyle": "shadow",
     "folderIconColor": "blue",
     "sidebarState": "small"
 }
