Made the delete modal more resistant against user error. e.g. miss clicking. The user now has to type the full name of the item their trying to delete before the confirm button works

--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,6 +1,6 @@
 {
     "theme": "light",
-    "sidebarColor": "invisible",
+    "sidebarColor": "original",
     "widgetStyle": "shadow",
     "folderIconColor": "blue",
     "sidebarState": "small"
