Added event driven design to the frontend code

--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,7 +1,7 @@
 {
     "theme": "light",
-    "sidebarColor": "original",
-    "widgetStyle": "shadow",
+    "sidebarColor": "shadow",
+    "widgetStyle": "border",
     "folderIconColor": "blue",
     "sidebarState": "small"
 }
