I dont event know its 4 am

--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,7 +1,7 @@
 {
-    "theme": "light",
+    "theme": "dark",
     "sidebarColor": "shadow",
     "widgetStyle": "border",
-    "folderIconColor": "blue",
+    "folderIconColor": "gray",
     "sidebarState": "small"
 }
