Cycling through a folders notes is now possible from within the editor

--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,6 +1,6 @@
 {
     "theme": "light",
-    "sidebarColor": "invisible",
+    "sidebarColor": "soft",
     "widgetStyle": "border",
     "folderIconColor": "blue",
     "sidebarState": "small"
