--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,7 +1,7 @@
 {
     "theme": "light",
-    "sidebarColor": "soft",
-    "widgetStyle": "border",
+    "sidebarColor": "invisible",
+    "widgetStyle": "shadow",
     "folderIconColor": "blue",
     "sidebarState": "small"
 }
