--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,5 +1,5 @@
 {
-    "theme": "light",
+    "theme": "dark",
     "sidebarColor": "original",
     "widgetStyle": "border",
     "folderIconColor": "gray",
