--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,9 +1,9 @@
 {
-    "theme": "dark",
+    "theme": "light",
     "sidebarColor": "original",
     "widgetStyle": "border",
     "folderIconColor": "gray",
     "sidebarState": "large",
     "collapsePinnedFolders": true,
-    "collapseCategories": true
+    "collapseCategories": false
 }
