The searchbar is now a re-useable web component

--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,9 +1,9 @@
 {
-    "theme": "dark",
-    "sidebarColor": "original",
-    "widgetStyle": "border",
+    "theme": "light",
+    "sidebarColor": "soft",
+    "widgetStyle": "shadow",
     "folderIconColor": "gray",
     "sidebarState": "large",
     "collapsePinnedFolders": true,
-    "collapseCategories": false
+    "collapseCategories": true
 }
