Notes & folder can now be linked within a note. Templates can now be applied to a note

--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,9 +1,9 @@
 {
-    "theme": "dark",
+    "theme": "light",
     "sidebarColor": "soft",
     "widgetStyle": "shadow",
     "folderIconColor": "gray",
     "sidebarState": "large",
     "collapsePinnedFolders": true,
-    "collapseCategories": true
+    "collapseCategories": false
 }
