--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,8 +1,8 @@
 {
     "theme": "light",
     "sidebarColor": "soft",
-    "widgetStyle": "shadow",
-    "folderIconColor": "gray",
+    "widgetStyle": "border",
+    "folderIconColor": "blue",
     "sidebarState": "large",
     "collapsePinnedFolders": true,
     "collapseCategories": false
