Removed the project management code and changed the map structure

--- a/storage/settings.json
+++ b/storage/settings.json
@@ -4,6 +4,6 @@
     "widgetStyle": "border",
     "folderIconColor": "blue",
     "sidebarState": "large",
-    "collapsePinnedFolders": true,
+    "collapsePinnedFolders": false,
     "collapseCategories": false
 }
