--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,8 +1,8 @@
 {
     "theme": "light",
-    "sidebarColor": "soft",
-    "widgetStyle": "border",
-    "folderIconColor": "blue",
+    "sidebarColor": "invisible",
+    "widgetStyle": "shadow",
+    "folderIconColor": "gray",
     "sidebarState": "large",
     "collapsePinnedFolders": false,
     "collapseCategories": false
